# ZIF

./: LICENSE  README.md  SPECIFICATION.md  ZIF.es6  ZIF.js  bigtiff.md  index.html  tiff6.md
.github/workflows/: ci.yml
zif-rs/: Cargo.toml  README.md
zif-rs/examples/: download.rs
zif-rs/fuzz/: .gitignore  Cargo.toml
zif-rs/fuzz/fuzz_targets/: metadata.rs  reader_ops.rs
zif-rs/src/: chunk.rs  codec.rs  doctest.rs  error.rs  format.rs  http.rs  lib.rs  metadata.rs  model.rs  parser.rs  reader.rs  reqwest.rs  sample.rs  std.rs  tokio.rs  writer.rs
zif-rs/tests/: coverage.rs  libtiff.rs  libtiff_roundtrip.rs  roundtrip.rs  urls.txt
