[package]
name = "zif-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1", features = ["derive"] }
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
libtiff-sys = "0.1"
zif = { path = ".." }

[[bin]]
name = "reader_ops"
path = "fuzz_targets/reader_ops.rs"
test = false
doc = false
bench = false

[[bin]]
name = "metadata"
path = "fuzz_targets/metadata.rs"
test = false
doc = false
bench = false
